- merged myths_and_legends pack - started process of adding national dex ids to file names in order to prevent duplicate spawn files - decreased egregiously high tapumon, cosmog/cosmoem, pecharunt, zygarde, zeraora spawnrates to the standard UR rate of 0.1 - raised chiyu spawnrate from 0.01 to 0.1 - spawn weight of the three birds has been decreased to 0.075 with a weather based multiplier of 2x to prevent 50% chance of moltres spawning when other URs have 0.1 weight

--- a/data/cobblemon/spawn_pool_world/0716_xerneas.json
+++ b/data/cobblemon/spawn_pool_world/0716_xerneas.json
@@ -4,45 +4,43 @@
   "neededUninstalledMods": [],
   "spawns": [
     {
-      "id": "mythsandlegends-groudon-1",
-      "pokemon": "groudon",
+      "id": "mythsandlegends-xerneas-1",
+      "pokemon": "xerneas",
       "presets": [
         "natural"
       ],
       "type": "pokemon",
       "context": "grounded",
       "bucket": "ultra-rare",
-      "level": "45-70",
+      "level": "50",
       "weight": 0.1,
       "condition": {
         "biomes": [
-          "#cobblemon:is_volcanic",
-          "minecraft:badlands",
-          "minecraft:desert",
-          "minecraft:eroded_badlands"
+          "minecraft:flower_forest",
+          "minecraft:forest",
+          "minecraft:meadow"
         ],
-        "key_item": "red_orb"
+        "key_item": "sapling_of_life"
       }
     },
     {
-      "id": "mythsandlegends-groudon-2",
-      "pokemon": "groudon",
+      "id": "mythsandlegends-xerneas-2",
+      "pokemon": "xerneas",
       "presets": [
         "natural"
       ],
       "type": "pokemon",
       "context": "grounded",
       "bucket": "ultra-rare",
-      "level": "45-70",
+      "level": "50",
       "weight": 0.1,
       "condition": {
         "biomes": [
-          "#cobblemon:is_volcanic",
-          "#cobblemon:is_desert",
-          "#cobblemon:is_arid",
-          "#cobblemon:is_thermal"
+          "#cobblemon:is_forest",
+          "#cobblemon:is_magical",
+          "#cobblemon:is_floral"
         ],
-        "key_item": "red_orb"
+        "key_item": "sapling_of_life"
       }
     }
   ]
